@@ -8,23 +8,23 @@
     <%= f.text_field :nome %>
   </p>
   <p>
-    <%= f.label :endereco %><br />
+    <%= f.label :endereco, 'Endereço' %><br />
     <%= f.text_field :endereco %>
   </p>
   <p>
     <%= f.label :nascimento %><br />
-    <%= f.date_select :nascimento %>
+    <%= f.date_select :nascimento, :end_year => Time.now.year, :start_year => Time.now.year-100 %>
   </p>
   <p>
-    <%= f.label :pais %><br />
+    <%= f.label :pais, 'País' %><br />
     <%= f.text_field :pais %>
   </p>
   <p>
-    Sexo<br />
+    <%= f.label :sexo%><br />
     <%= select("hospede","sexo", Hospede.generos , {} , { :new => nil }) %>
   </p>
   <p>
-    Estado civil<br />
+    <%= f.label :estCivil, 'Estado civil'%><br />
     <%= select("hospede","estCivil", Hospede.estadosCivis , {} , { :new => nil }) %>
   </p>
   <p>
