@@ -5,7 +5,7 @@
     <th>Nome</th>
     <th>Endereço</th>
     <th>Nascimento</th>
-    <th>Pais</th>
+    <th>País</th>
     <th>Sexo</th>
     <th>Estado Civil</th>
     <th colspan="3">Opções</th>
