@@ -14,7 +14,7 @@
 </p>
 
 <p>
-  <b>Pais:</b>
+  <b>País:</b>
   <%=h @hospede.pais %>
 </p>
 
@@ -24,7 +24,7 @@
 </p>
 
 <p>
-  <b>Estado Civil:</b>
+  <b>Estado civil:</b>
   <%=h @hospede.estCivil %>
 </p>
 
