@@ -1,7 +1,7 @@
-<h1>Lista de servicos</h1>
+<h1>Lista de serviços</h1>
 
 <table>
-  <tr class="list"> 
+  <tr> 
     <th>Nome</th>
     <th>Valor</th>
     <th>Descrição</th>
