@@ -4,7 +4,7 @@
 </p>
 
 <p>
-  <b>Descricao:</b>
+  <b>Descrição:</b>
   <%=h @tipos_apartamento.descricao %>
 </p>
 
